added resume and some more about me information

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ img {
 </li>
 <li>
   <a href="https://www.linkedin.com/in/andrea-anez/">
-    <span class="fa fa-linkedin-in"></span>
+    <span class="fa fa-linkedin"></span>
      
   </a>
 </li>
@@ -135,11 +135,27 @@ img {
 </p>
 <p><br /></p>
 </div>
+<div id="cross-country-and-track" class="section level2">
+<h2><a href="https://ucsb.prestosports.com/sports/w-track/2020-21/bios/anez_andrea_o2fo?view=bio">Cross Country and Track</a></h2>
+<p>As a member of UCSB women’s track and cross country teams I’m thankful for the opportunity to train with other dedicated, physically tough and supportive women. My biggest achievement thus far has been helping the Gauchos to a second place finish in the 2019 Big West Track and Field Conference after scoring in the 10k event. Additionally, although I didn’t score, I’m proud to be apart of the top seven girls who won the Big West Cross Country championships my freshman year.</p>
+<p class=".noborder">
+<img  src="img/team.JPG" alt="My picture" width ="500" height ="300" />
+</p>
+<p><br /></p>
+</div>
 <div id="start-up---moresolar" class="section level2">
-<h2><a href="https://medium.com/@moresolarllc">2018 Start Up - “Moresolar”</a></h2>
+<h2><a href="https://medium.com/@moresolarllc">Start Up - “Moresolar”</a></h2>
 <p>During my freshman year at UCSB I had the opportunity create a team of students centered around the goal of developing a simple device that would increase the efficiency of solar panels. This team eventually evolved into the company “Moresolar.” After winning the <a href="https://www.youtube.com/watch?v=k4r0d9u37r0">UCSB New Venture Competition</a> (watch my pitch at 17:10) our company went on join the UCSB G2 Summer Incubator. As a co-founder my responsibilities included managing our technical team composed of interns <a href="https://www.linkedin.com/in/haixu-yin-b03126b2/">Haixu Yin</a> and <a href="https://www.linkedin.com/in/syazamustafah/">Syaza Mustafah</a> as well as drafting the provisional patent. By the end of the summer our technical team had successfully developed a working prototype and gathered rigorous performance data that ultimately earned Moresolar additional seed funding of $75,000 from angel investors.</p>
 <p class=".noborder">
 <img  src="img/solar.jpg" alt="My picture" width ="500" height ="300" />
+</p>
+<p><br /></p>
+</div>
+<div id="where-i-grew-up" class="section level2">
+<h2>Where I Grew Up</h2>
+<p>Exeter CA is a small agricultural town located in the valley just bellow Sequoia National Park. Growing up with miles of empty ranch land right in my backyard lent its self to exploring and I spent most of my time outdoors. Having a big yard also meant lots of pets and lots of chores. By high school I was famous for selling eggs from my flock of 100+ chickens. Below is a picture of my sister and I on our trusty steed “James.”</p>
+<p class=".noborder">
+<img  src="img/james.JPG" alt="My picture" width ="500" height ="300" />
 </p>
 <style>
 
