New Project Page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ img {
   </a>
 </li>
 <li>
-  <a href="geog176A.html">
+  <a href="projects.html">
     <span class="fa fa-rocket"></span>
      
     Personal Projects
