--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@ img {
   </a>
 </li>
 <li>
-  <a href="geog176A.html">
+  <a href="projects.html">
     <span class="fa fa-rocket"></span>
      
     Personal Projects
