New Project Page

--- a/cv.html
+++ b/cv.html
@@ -122,7 +122,63 @@ img {
 
 
 <div id="content">
-
+<p>Goleta CA 93117• (559)-909 9169 • <a href="mailto:anez@ucsb.edu" class="email">anez@ucsb.edu</a> • www.linkedin.com/in/andrea-anez</p>
+<p><strong>DOD Clearance Level: Secret, Top Secret investigation in process</strong></p>
+<div id="summary" class="section level2">
+<h2>SUMMARY</h2>
+<hr>
+<p>As a Computer Engineering major, I’m hoping to focus on the software applications of my major. Currently, I’m working as a summer intern at Northrop Grumman on a Dev-ops team helping to deploy container management systems and continues delivery tools.</p>
+</div>
+<div id="education" class="section level2">
+<h2>EDUCATION</h2>
+<hr>
+<p><strong>University of California Santa Barbara Expected Graduation: June 2022 B.S. Computer Engineering</strong></p>
+<p><strong>Languages</strong></p>
+<ul>
+<li>C++, Python, MATLAB, R</li>
+</ul>
+<p><strong>Projects</strong></p>
+<ul>
+<li>Predicted race times for my track team by training a mathematical model on historical data, implemented the model in MATLAB.</li>
+<li>Classified songs biased on user preference using a Gaussian Mixture Model and implemented with Python using the Essentia, Pandas and Scikit Learn libraries.</li>
+</ul>
+</div>
+<div id="experience" class="section level2">
+<h2>EXPERIENCE</h2>
+<hr>
+<p><strong>Northrop Grumman – Aerospace, San Diego</strong> June 2020 – September 2020 <em>Summer Intern</em></p>
+<ul>
+<li>Primary team member responsible for implementing a new container management system</li>
+<li>Significantly reduced build times by utilizing continuous delivery tools Docker, Kubernetes, Argocd and Jenkins</li>
+<li>Provided an unlimited number of build agents at no cost and optimized resource consumption</li>
+</ul>
+<p><strong>Moresolar, Santa Barbara</strong> November 2017 -September 2019 <em>Founder</em></p>
+<ul>
+<li>Organized a team of students to compete in the New Venture Competition at UC Santa Barbara</li>
+<li>Led numerous pitches to Santa Barbara community members, business leaders, and investors<br />
+</li>
+<li>Managed $20,000 in seed funding and negotiated $100,000 in additional investment</li>
+<li>Worked with legal advisers to draft and submit a provisional patent</li>
+<li>Collaborated with researchers at the National Renewable Energy Laboratories to verify device performance</li>
+</ul>
+</div>
+<div id="extracurricular" class="section level2">
+<h2>EXTRACURRICULAR</h2>
+<hr>
+<p><strong>NCAA Division 1 Athletics</strong> October 2017- present</p>
+<ul>
+<li>Top seven runner on the 2017 women’s cross-country team which captured the Big West Conference Tittle</li>
+</ul>
+<p><strong>Society of Women Engineers</strong> December 2018-present</p>
+<ul>
+<li>Volunteered at Isla Vista Elementary teaching student’s robotics and programming</li>
+</ul>
+</div>
+<div id="awards" class="section level2">
+<h2>AWARDS</h2>
+<hr>
+<p><strong>2017 New Venture Competition – Overall Winner, John and Cheryl Gerngross Impact Prize </strong> May 2018 - Delivered the first half of a fifteen-minute pitch and answered questions from local business leaders. A video by UCTV can be found on my LinkedIn.</p>
+</div>
 </div>
 
 
