New Project Page

--- a/cv.html
+++ b/cv.html
@@ -122,8 +122,12 @@ img {
 
 
 <div id="content">
-<p>Goleta CA 93117• (559)-909 9169 • <a href="mailto:anez@ucsb.edu" class="email">anez@ucsb.edu</a> • www.linkedin.com/in/andrea-anez</p>
-<p><strong>DOD Clearance Level: Secret, Top Secret investigation in process</strong></p>
+<center>
+Goleta CA 93117• (559)-909 9169 • <a href="mailto:anez@ucsb.edu" class="email">anez@ucsb.edu</a> • www.linkedin.com/in/andrea-anez
+</center>
+<center>
+<strong>DOD Clearance Level: Secret, Top Secret investigation in process</strong>
+</center>
 <div id="summary" class="section level2">
 <h2>SUMMARY</h2>
 <hr>
